plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1' // для сборки jar с зависимостями
}

group = 'com.bot'
version = '1.0'

// Используем toolchain для гарантированного Java 21 на любых средах
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20230227'
    implementation 'org.telegram:telegrambots:6.8.0'
    implementation 'org.telegram:telegrambots-meta:6.8.0'
    implementation 'org.slf4j:slf4j-simple:2.0.9'
}

application {
    mainClass = 'com.bot.BotMain'
}

shadowJar {
    archiveFileName = 'bot.jar'
    mergeServiceFiles()
}

jar {
    manifest {
        attributes(
                "Main-Class": "com.bot.BotMain"
        )
    }
}
